--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "element-plus": "^2.2.27",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
