--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-plus": "^2.2.27",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
