--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.2.27",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vuedraggable": "^4.1.0"
   },
