--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^11.1.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
